syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "ServiceAccountGrpc";

service AccountGrpc {   

  // 1:一元调用:判断程序/网络是否启动
  rpc Activity (google.protobuf.Empty) returns (google.protobuf.Empty);
  // 2:加载用户信息
  rpc LoadUser(LoadUserReq) returns (google.protobuf.Empty);
  // 3:获取用户信息
  rpc GetUser(GetUserReq) returns(GetUserRes);
}

message LoadUserReq{ 
  int64 user_id=1;
}

message UserInfo{
  int64 user_id=1;
  string user_name=2;
}
message GetUserReq{
  repeated int64 user_id=1;
};
message GetUserRes{
  repeated UserInfo users=1;  
}